Create the whole training flow

--- a/src/tests/testdata/test_loading_config/test_config_without_em_repeats.yml
+++ b/src/tests/testdata/test_loading_config/test_config_without_em_repeats.yml
@@ -4,3 +4,5 @@ config:
   - data/commands/tracks-ania
   test_records:
   - data/commands/test-records
+  discretization_step: 50
+  gaussians_count: 2
