--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,11 @@
 config:
   training_records:
   - data/commands/tracks
-  - data/commands/tracks-ania
   test_records:
-  - data/commands/test-records
+  - data/commands/tracks-ania
+  training_supervectors: data/commands/supervectors/training.json
+  test_supervectors: data/commands/supervectors/test.json
+  start_from: USE_READY_MFCC_BANK
   em_repeats: 20
   discretization_step: 50
   gaussians_count: 2
