--- a/src/tests/testdata/test_loading_config/test_config.yml
+++ b/src/tests/testdata/test_loading_config/test_config.yml
@@ -1,9 +1,12 @@
 config:
   training_records:
-  - data/commands/tracks
-  - data/commands/tracks-ania
+  - training_path_a
+  - training_path_b
   test_records:
-  - data/commands/test-records
+  - test_path
+  training_supervectors: training_sv
+  test_supervectors: test_sv
+  start_from: USE_READY_MFCC_BANK
   em_repeats: 20
   discretization_step: 50
   gaussians_count: 2
